# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
Matopeli/: pom.xml
Matopeli/src/main/java/matopeli/: Game.java  Main.java  Matopeli.java  Menu.java
Matopeli/src/main/java/matopeli/dao/: FileStatsDao.java
Matopeli/src/main/java/matopeli/domain/: Stat.java
Matopeli/src/main/java/matopeli/ui/: Apple.java  CellContent.java  MatopeliUi.java  Snake.java
Matopeli/src/test/java/matopeli/: MatopeliTest.java
documentation/: architecture.md  instructions-for-use.md  requirement_specification.md  work-hour-records.md
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: README.md
laskarit/viikko2/Maksukortti/: pom.xml
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL.drawio  machine.drawio  monopoly_001.drawio  monopoly_002.drawio
src/: database.py  index.py  main.py
src/entities/: entry.py  user.py
src/model/: diary_model.py  model.py  user_model.py
src/services/: diary_service.py
src/tests/: diary_model_test.py  diary_service_test.py  user_model_test.py  view_model_test.py
src/ui/: create_user.py  login.py  ui.py
src/view/: create_user_view.py  diary_view.py  entry_view.py  login_view.py
src/viewmodel/: view_model.py
(+6 files in other folders)
