[tool.poetry]
name = "pydiary"
version = "0.1.0"
description = "Diary application to create diary entries and notes"
authors = ["Tuukka Laitinen <8557415+tuukkalai@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
